changed link to faq

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -43,7 +43,7 @@
 
 					<% if ['Code','Design','Hackathon'].include?(@challenge_detail['Challenge_Type__c']) %>
 						<p>Your submission will be judged by a panel of peers based upon <%= link_to 'this criteria', scorecard_display_url(@challenge_detail["Challenge_Id__c"]) %>.  If you 
-							would like to request an extension, please read <a href="/faq">Can challenge deadlines be extended for more time?</a> on our FAQ. We do not want to grant extensions 
+							would like to request an extension, please read <a href="http://community.cloudspokes.com/cloudspokes/topics/can_challenge_deadlines_be_extended_for_more_time">Can challenge deadlines be extended for more time?</a> on our FAQ. We do not want to grant extensions 
 							unless there is a valid reason.</p> 
 					<% end %>
 
