--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -53,7 +53,7 @@
         </ul>
       </div>
 	<% else %>
-		<p style="padding-top: 10px">No leaderboard results yet for this time month.</p>
+		<p style="padding-top: 10px;padding-left:40px">No leaderboard results yet for this time month.</p>
 	<% end %>				
 		
 	</div>
