added recalc of home page stats

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,6 +3,8 @@
 </div>
 
 <div class="page-padding">
+
+	<p><a href="/admin/cache_stats">Recalculate Home Page Stats</a> - This will kick off the batch process in saleforce to recalculate and cache the stats for the home page.</p>	
 		
 	<p><a href="/admin/blogfodder/0">Blog fodder</a> - Headstart for writing blog entries for a completed challenge.</p>
 	
