added savon for stats ws

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,6 +4,8 @@
 
 <div class="page-padding">
 
+	<p><a href="/admin/stats">View the Home Page Stats</a> - Call the SOAP web service and displays the stats as JSON for your viewing pleasure.</p>		
+
 	<p><a href="/admin/cache_stats">Recalculate Home Page Stats</a> - This will kick off the batch process in saleforce to recalculate and cache the stats for the home page.</p>	
 		
 	<p><a href="/admin/blogfodder/0">Blog fodder</a> - Headstart for writing blog entries for a completed challenge.</p>
