changed about link

--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -73,7 +73,7 @@
             <h2 class="melbourne">Join Us</h2>
             <p>Participate in challenges, build a diverse portfolio, learn something new, and earn a little cash money on the side too.</p>
             <a class="button-blue" href="/challenges">Challenges</a>
-            <a href="/about" class="button-grey">Learn More</a>
+            <a href="http://content.cloudspokes.com/welcome2cloudspokes" class="button-grey">Learn More</a>
             <div class="cl">&nbsp;</div>
         </div>
         <div class="box-b notext">&nbsp;</div>
