changed to use new api

--- a/app/views/members/_recommendation.html.haml
+++ b/app/views/members/_recommendation.html.haml
@@ -1,12 +1,12 @@
 .box
   .box-b
     .box-t
-      %a.fl{:href => member_path(recommendation["Recommendation_From__r"]["Name"])}
-        %img{:width => "49px", :height => "49px", :src => recommendation["Recommendation_From__r"]["Profile_Pic__c"]}
+      %a.fl{:href => member_path(recommendation["recommendation_from__r"]["name"])}
+        %img{:width => "49px", :height => "49px", :src => recommendation["recommendation_from__r"]["profile_pic"]}
       .text-holder.fr
         %div{:style => "width: 480px; overflow-x: auto; overflow-y: hidden"}
-          %p{:style => "padding-bottom: 15px"}= raw(recommendation["Recommendation__c"])
+          %p{:style => "padding-bottom: 15px"}= raw(recommendation["recommendation"])
         %span
-          %a{:href => member_path(recommendation["Recommendation_From__r"]["Name"])}= recommendation["Recommendation_From__r"]["Name"]
-          = recommendation["CreatedDate"].to_date.strftime(" %b. %d, %Y")
+          %a{:href => member_path(recommendation["recommendation_from__r"]["name"])}= recommendation["recommendation_from__r"]["name"]
+          = recommendation["createddate"].to_date.strftime(" %b. %d, %Y")
       .cl
