--- a/app/views/accounts/password.html.haml
+++ b/app/views/accounts/password.html.haml
@@ -8,7 +8,7 @@
         %h3 Change your password
         = flash_messages
         .cl
-        - if @account["Login_Managed_By__c"].eql?('CloudSpokes')
+        - if @account["login_managed_by"].eql?('CloudSpokes')
           %p To change your password we will email you a temporary passcode. You will then need to use this passcode to change your password.
           = form_tag("/account/password?reset=true", :name => "form_password")
           %hidden.txt{:maxlength => 100, :name => "form_password[old_password]", :value => "#{current_user.username}"}
